Made the navbar into a list... maybe should make it into a table? can't seem to get the links next to each other with correct spacing for all browsers

--- a/main.css
+++ b/main.css
@@ -19,39 +19,90 @@
 .gateway {
     background-image: url("hehu2.jpeg");
     background-color: #cccccc;
-    background-size: cover;
+
+    
+    
+      /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
-#content {
-   margin:0;
-   padding:0;
-   height:100%;
-}
 
-.footer {
-    background-color:black;
-    display: block;
-}
-.footer-icons {
-    padding:15px;
-    height:30px;
-    width:30px;
-}
-.footer-icons-special {
-    padding:11px;
-    height:37px;
-    width:37px;
-}
+
 .header-links {
     padding: 50px;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.5em;
     text-transform: uppercase;
     font-family: 'Gotham-Medium', "Helvetica Neue", Helvetica, sans-serif;
     text-decoration: none;
     color:black;
+    font-size: 20px;
+    
+    /*display: block;*/
+    /*width: 120px;*/
+    /*font-weight: bold;*/
+    /*color: #FFFFFF;*/
+    /*background-color: #98bf21;*/
+    /*text-align: center;*/
+    /*padding: 4px;*/
+    /*text-decoration: none;*/
+    /*text-transform: uppercase;*/
 }
+
+ul {
+    list-style: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+
+
+#content {
+  position: relative;
+  margin: 0;
+  min-height: 100%;
+}
+
 .soundcloud {
     float: left;
     width: 100%;
     height: 100%;
 }
+
+
+
+.footer {
+    background-color:black;
+    display: block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 0.005rem;
+    /*background-color: #efefef;*/
+    text-align: center;
+}
+.footer-icons {
+    padding:15px;
+    height:30px;
+    width:30px;
+    color: black;
+}
+.footer-icons-special {
+    padding:11px;
+    height:37px;
+    width:37px;
+    color: black;
+}
+
